src/test/deca/syntax/invalid/resultats/test2_empty-synt.res
./src/test/deca/syntax/invalid/test2_empty.deca:14:0: no viable alternative at input '}'
